# Page-analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: check_code.yml
page_analyzer/: __init__.py  app.py
page_analyzer/modules/: config.py  db.py  models.py  url_manager.py
page_analyzer/moduls/: db.py  models.py  url_manager.py
page_analyzer/templates/: index.html  showURL.html  showURLS.html
