[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gaevskii.V <gaevskii.v95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
validators = "^0.33.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
gunicorn = "^22.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
